Removed reference as it might be confusing

--- a/linreg/multi_manual.ipynb
+++ b/linreg/multi_manual.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Linear regression - Multiple variables\n",
     "\n",
-    "Inspired from notebook here: http://nbviewer.ipython.org/github/justmarkham/DAT4/blob/master/notebooks/08_linear_regression.ipynb\n",
-    "\n",
-    "Purpose of this notebook is to perform linear regression using gradient descent and normal equation manually instead of using scikit built in functions as in the original notebook."
+    "Purpose of this notebook is to perform linear regression using gradient descent and normal equation manually instead of using scikit built in functions."
    ]
   },
   {
