--- a/2_logistic_regression/2_multiclass_classification_reg.ipynb
+++ b/2_logistic_regression/2_multiclass_classification_reg.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +212,7 @@
        "4  G   2   1   3   1   1   8   6   6   6   6   5   9   1   7   5  10"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -339,17 +339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training : [A...B...C...D...E...F...G...H...I...J...K...L...M...N...O...P...Q...R...S...T...U...V...W...X...Y...Z...]\n",
-      "Theta 0 :  [-8.15260652 -1.40563715  0.46953984  1.89062338  0.0811078  -1.12130118\n",
-      "  1.24082918 -0.85548371 -1.36608087 -2.36787335 -1.60292805 -1.00176931\n",
-      "  1.2565487  -0.38369954 -0.23200572  0.52978917 -1.12123371]\n",
-      "Theta 24 :  [-8.91447855  0.65308559 -0.96866753 -0.2111056   0.6703919  -0.129175\n",
-      " -0.0139281  -1.47097559 -1.73173578 -0.64653665 -0.92939412  2.61596649\n",
-      " -0.21230137 -1.82521413  2.06532548  1.13336858 -1.47647948]\n",
-      "Theta 25 :  [-10.33602205  -0.44710938  -1.38000099  -0.81082325   0.3966547\n",
-      "   0.75774299   1.92799381  -0.25826105  -0.90400928   2.7907408\n",
-      "   2.15928605   0.16713295   0.10612632  -0.75823395   0.14545108\n",
-      "   3.42056755  -0.79086663]\n"
+      "Training : [A...B...C...D...E...F...G...H...I...J...K...L...M...N...O...P...Q...R...S...T...U...V...W...X...Y...Z...]"
      ]
     }
    ],
@@ -411,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -438,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -447,8 +437,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training accuracy for 16000 samples (percentage) [[ 72.8125]]\n",
-      "Test accuracy for 4000 samples (percentage) [[ 73.425]]\n"
+      "Training accuracy for 16000 samples (percentage) [[ 72.80625]]\n",
+      "Test accuracy for 4000 samples (percentage) [[ 72.7]]\n"
      ]
     }
    ],
